[gd_scene load_steps=5 format=3 uid="uid://dp10plw6af2i1"]

[ext_resource type="Script" path="res://src/scenes/game/ui/boss_stamina.gd" id="1_dvtoe"]
[ext_resource type="Texture2D" uid="uid://c27r6vx2nbwgu" path="res://assets/graphics/ui/hud/boss_stamina_border.png" id="2_6qrx5"]
[ext_resource type="Texture2D" uid="uid://2dj3k4dfse5a" path="res://assets/graphics/ui/hud/boss_stamina_bar.png" id="3_2uagg"]
[ext_resource type="Script" path="res://src/scenes/game/ui/actor_stamina.gd" id="4_6a2bw"]

[node name="BossStamina" type="VBoxContainer"]
offset_right = 166.0
offset_bottom = 16.0
theme_override_constants/separation = 0
script = ExtResource("1_dvtoe")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1

[node name="BossName" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Boss Name"

[node name="StaminaBar" type="TextureProgressBar" parent="."]
layout_mode = 2
texture_under = ExtResource("2_6qrx5")
texture_progress = ExtResource("3_2uagg")
script = ExtResource("4_6a2bw")
